*
* Light And Shadow. A Persistent Universe based on Robert Jordan's Wheel of Time Books.
* Copyright (C) 2001-2007 WOTLAS Team
*
* CHANGES BETWEEN VERSIONS
* ( File Best Viewed in 1024x768 or above)
*

CHANGES BETWEEN 1.3 AND ?
-------------------------

Sleeping Owl - preparing alpha release
 - 12/09/07 - Fix : loading images and world map datas in WebStart release.
 - 12/03/07 - netbeans development : javawebstart integration
 - 12/03/07 - fixing the building server default id

Sleeping Owl - Jdk 1.6 compliant task
 - 11/26/07 - Alice bot sources of program D from wotlas141.zip
 - 11/26/07 - Jython jar from vyger project
 - 11/26/07 - Applying Eclipse clean-up tool

Sleeping Owl - Jdk 1.6 compliant task
 - 11/25/07 - Fix : unmappable character for encoding UTF-8
 - 11/25/07 - Fix : Font loading and NullPointerException
 - 11/25/07 - Fix : non-varargs call of varargs method
 - 11/25/07 - Fix : enum keyword
 - 11/25/07 - Fix : assignement has no effect
 - 11/25/07 - Changing ../bin in bin
 - 11/25/07 - netbeans and eclipse development
 - 11/25/07 - netbeans and eclipse development running and testing.
 - 11/25/07 - eclipse sources cleanup


SSzretter -
 - 12/20/03 Changed all hard coded references to "Lucida Blackletter" to "Lucida Blackletter Regular" to fix Java 1.4.2 compatibility
    ** need to test this new font name on linux/mac to make sure it works
 - 12/20/03 Added ToDo.txt - to keep track of ideas, and what needs to be done
 - 12/20/03 Commented out import wotlas.client.screen.extraplugin.*; in client datamanager to compile - must be work in progress?
  



CHANGES BETWEEN V1.2.3 AND V1.3 (20 May 2002)
---------------------------------------------

 - Added bots definitions and a link to a remote AliceBot server.
 - Improved the server architecture : lots of tasks done before by the ServerDirector are now
   done by the DataManager & ServerManager.
 - Added a new method for dynamic code loading.