@@ -10,6 +10,8 @@ CHANGES BETWEEN 1.3 AND ?
 -------------------------
 
 Sleeping Owl - preparing alpha release
+ - 12/11/07 - Fix : loading of messages and plugins classes in JavaWebStart client.
+ - 12/11/07 - Eclipse integration : adding resources in /wotlas/.settings/ directory.
  - 12/09/07 - Fix : loading images and world map datas in WebStart release.
  - 12/03/07 - netbeans development : javawebstart integration
  - 12/03/07 - fixing the building server default id
